# IntoTheWoodsXX

./: .gitattributes  .gitignore  CMakeList.txt  CMakeLists.txt  ClassDiagram.cd  CmakeList.txt  README.md
Assets/: Dawn.txt  Evening.txt  Leaderboard.txt  LevelCreationDictionary.txt  SavedLevel.json
Include/: Being.h  Game.h
Include/DefineSource/: SourcePath.h.in
Include/Entities/: Entities.h  Entity.h  Player.h
Include/Entities/Characters/: Character.h  Player.h
Include/Entities/Characters/Enemies/: Bear.h  Enemy.h  Scorpion.h  Snake.h
Include/Entities/Obstacle/: Obstacle.h
Include/Entities/Obstacles/: Ground.h  Nest.h  Obstacle.h  TallGrass.h  Trap.h
Include/Entities/Projectiles/: Poison.cpp  Poison.h  Projectile.h  Rock.h
Include/GraphicElements/: Button.h
Include/Levels/: Dawn.h  Evening.h  Level.h
Include/Managers/: CollisionManager.h  EventManager.h  GraphicManager.h  Graphics.h  InputManager.h
Include/Menus/: MainMenu.h  Menu.h  MenuPause.h  NewGameMenu.h  Ranking.h  StateMenu.h
Include/Observers/: MenuObserver.h  Observer.h  PlayerInputObserver.h  TextObserver.h
Include/Properties/: GraphicProps.h  PlayerProps.h
Include/States/: GameOverState.h  State.h  StateMachine.h
Include/Utils/: EntityList.h  List.h  TextUtils.h
UML/: UML2.mdj  UMLFinal.mdj  UML_21.08.2024.mdj  UML_28.08.2024.mdj
src/: Bear.cpp  Being.cpp  Button.cpp  Character.cpp  CollisionManager.cpp  Dawn.cpp  Enemy.cpp  Entities.cpp  Entity.cpp  EntityList.cpp  Evening.cpp  EventManager.cpp  Game.cpp  GameOverState.cpp  GraphicManager.cpp  Graphics.cpp  Ground.cpp  InputManager.cpp  Level.cpp  MainMenu.cpp  Menu.cpp  MenuObserver.cpp  MenuPause.cpp  Nest.cpp  NewGameMenu.cpp  Observer.cpp  Obstacle.cpp  Player.cpp  PlayerInputObserver.cpp  Poison.cpp  Projectile.cpp  Ranking.cpp  Rock.cpp  Scorpion.cpp  Snake.cpp  State.cpp  StateMachine.cpp  StateMenu.cpp  States.cpp  TallGrass.cpp  (+4 more)
